--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -15,6 +15,16 @@ input[type=text] {
     width: 30vh;
 }
 
+input[type=password] {
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #cc0000;
+    color: #cc0000;
+    padding: 10px;
+    margin: 10px;
+    width: 30vh;
+}
+
 .log{
     font-size: 35px;
 }
@@ -52,7 +62,6 @@ label.logEmail{
    
 .log{
     font-size: 45px;
-} 
-    
-  }
+    }   
+}
         
